--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Movie App</string>
+    <string name="app_name">Movies</string>
+    <string name="request_failed_press_to_try_again">Request Failed Press to try again</string>
+    <string name="no_data_found">No Data Found</string>
+    <string name="str_network_no_internet_connection">There is no wifi or internet connection</string>
 </resources>
