- Finish Home Screen
- add shimmer  placeholder layout
- add BindingAdapters
- MoviesListAdapter
-

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="request_failed_press_to_try_again">Request Failed Press to try again</string>
     <string name="no_data_found">No Data Found</string>
     <string name="str_network_no_internet_connection">There is no wifi or internet connection</string>
+    <string name="str_vote">Vote Is</string>
 </resources>
